[project]
name = "caldav-server-tester"
version = "0.1.0"
description = ""
authors = [
    {name = "Tobias Brox",email = "tobias@redpill-linpro.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "caldav_server_tester", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
