[project]
name = "caldav-server-tester"
version = "0.1.0"
license = "AGPL-3.0-or-later"
license-files = ["agpl-3.0.md"]
description = "CalDAV Server Checker - checking a CalDAV server for compatibility issues"
authors = [
    {name = "Tobias Brox",email = "tobias@redpill-linpro.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "caldav>=2.1.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-mock>=3.12.0"
]

[tool.poetry]
packages = [{include = "caldav_server_tester", from = "src"}]

[tool.poetry.scripts]
caldav-server-tester = "caldav_server_tester:check_server_compatibility"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
